Update the copy of the press release

--- a/statements/split.html
+++ b/statements/split.html
@@ -5,7 +5,7 @@ description: "Communication Statement on the Inventures Internet Site"
 ---
 
 <div class='container px2'>
-  <h2>Communication statement regarding the company split</h2>
+  <h2>Press Release: Creation of Inventures Investment Partners</h2>
 
   <div class='clearfix mxn2'>
     <div class='col sm-col-12 px2'>
@@ -15,10 +15,10 @@ description: "Communication Statement on the Inventures Internet Site"
 
       <ul>
         <li>
-          the first one, Mymicroinvest rebranded Spreds, will be exclusively devoted to crowdfunding and related finance placements using MyMicroInvest’s platform;
+          the first one, MyMicroInvest rebranded Spreds, will be exclusively devoted to MyMicroInvest’s investment platform and related services;
         </li>
         <li>
-          the second, Inventures Investment Partners, will focus on the management of the investment funds Inventures I and Inventures II and any other fund that will be created eventually afterwards. Both funds invest exclusively in start- ups and scale-ups which comply at least with 1 of the 17 sustainable development goals as defined by the United Nations.
+          the second, Inventures Investment Partners, will focus on the management of the investment funds Inventures I and Inventures II and any other fund that will be created eventually afterwards. Both funds invest exclusively in start-ups and scale-ups which comply at least with 1 of the 17 sustainable development goals as defined by the United Nations.
         </li>
       </ul>
 
@@ -27,7 +27,7 @@ description: "Communication Statement on the Inventures Internet Site"
       </p>
 
       <p>
-      As far as Inventures Investment Partners is concerned, the main reason of this reorganization is to have a dedicated governance and resource allocated fully to the management of the funds. This will make us more efficient in our work and will offer a clearer decision and execution process for the funds. It will also eliminate any potential (or suspicion) conflict of interest between the investment platform created by MyMicroInvest and the Inventures Funds. To that effect, the Inventures Investment Partners’ executives are resigning from the Spreds governing and executive bodies (including its Board of Directors) and Spreds executives are resigning from all mandates within Inventures governance and operations.
+      As far as Inventures Investment Partners is concerned, the main reason of this reorganization is to have a dedicated governance and resource allocated fully to the management of the funds. This will make us more efficient in our work and more transparent to the market with regards to the decision and execution process for the funds. To that effect, the Inventures Investment Partners’ executives are resigning from the Spreds governing and executive bodies (including its Board of Directors) and Spreds executives are resigning from all mandates within Inventures governance and operations.  
       </p>
 
       <p>
@@ -40,18 +40,16 @@ description: "Communication Statement on the Inventures Internet Site"
           operating aspects of the Funds under management; </li>
         <li> Laurent Jouret (Senior Investment Manager) will be heading the Corporate Services of Inventures Investment Partners; </li>
         <li> Alex Houtart (Impact Manager) is the person in charge of the Impact policy and measurement as well as the contact person for the fundraising; </li>
-        <li> Inès Mertens (Sourcing Manager) will become the contact person for entrepreneurs and for any other enquiries about the funds as the spokesperson.  </li>
+        <li> Inès Mertens (Sourcing Manager) will become the contact person for entrepreneurs and for any other enquiries about the funds as the spokesperson.</li>
       </ul>
       <p>The rest of the team will be fully devoted to the funds managed by Inventures Investment Partners. Further employees could be hired in the future depending upon the size of Inventures II.</p>
 
-      <p> No change of the Investment Committees has been planned except that Gilles van der Meerschen will step down as a member for fully refocusing his attention on Spreds. New members of the committee of Inventures II will also be appointed in a near future so reflecting the growth of that fund.  </p>
+      <p>No change of the Investment Committees has been planned except that Gilles van der Meerschen will step down as a member for fully refocusing his attention on Spreds. New members of the committee of Inventures II will also be appointed in a near future so reflecting the growth of that fund.</p>
 
-      <p> We remain committed to help transforming our economies towards more early-stage capital devoted to sustainable entrepreneurs in all of the U.N. Sustainable Development Goals fields. We strive to provide our shareholders superior financial returns (aiming at a 15% annual return) but as well as impact (measurable) returns are concerned. The combination of both is very much possible when investing in early-stage scale-ups and start-ups focusing on the SDG, as demonstrated by our first fund, Inventures 1.  </p>
+      <p>We remain committed to help transforming our economies towards more early-stage capital devoted to sustainable entrepreneurs in all of the U.N. Sustainable Development Goals fields. We strive to provide our shareholders superior financial returns (aiming at a 15% annual return) but as well as impact (measurable) returns are concerned. The combination of both is very much possible when investing in early-stage scale-ups and start-ups focusing on the SDG, as demonstrated by our first fund, Inventures 1.</p>
 
-      <p> We will further communicate with you once the split will have been carried out.
-In the meantime, do not hesitate to contact Inès Mertens (ines@inventures.fund) should you have any further question.  </p>
-
-      <p> Olivier de Duve </p>
+      <p>We will further communicate with you once the split will have been carried out.
+In the meantime, do not hesitate to contact Inès Mertens (ines@inventures.fund) should you have any further question.We will further communicate with you once the split will have been carried out. In the meantime, do not hesitate to contact Inès Mertens a (<a href="mailto:ines@inventures.fund">ines@inventures.fund</a>) should you have any further question.  </p>
     </div>
   </div>
 </div>
