Update page title and description

--- a/statements/split.html
+++ b/statements/split.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Split between MyMicroInvest and Inventures
-description: "Communication Statement on the Inventures Internet Site"
+title: Press Release: Creation of Inventures Investment Partners
+description: "Press Release: Creation of Inventures Investment Partners"
 ---
 
 <div class='container px2'>
