Obviously that : would cause things to break

--- a/statements/split.html
+++ b/statements/split.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Press Release: Creation of Inventures Investment Partners
+title: Press Release Creation of Inventures Investment Partners
 description: "Press Release: Creation of Inventures Investment Partners"
 ---
 
