Remove duplicate text

--- a/statements/split.html
+++ b/statements/split.html
@@ -48,8 +48,7 @@ description: "Press Release: Creation of Inventures Investment Partners"
 
       <p>We remain committed to help transforming our economies towards more early-stage capital devoted to sustainable entrepreneurs in all of the U.N. Sustainable Development Goals fields. We strive to provide our shareholders superior financial returns (aiming at a 15% annual return) but as well as impact (measurable) returns are concerned. The combination of both is very much possible when investing in early-stage scale-ups and start-ups focusing on the SDG, as demonstrated by our first fund, Inventures 1.</p>
 
-      <p>We will further communicate with you once the split will have been carried out.
-In the meantime, do not hesitate to contact Inès Mertens (ines@inventures.fund) should you have any further question.We will further communicate with you once the split will have been carried out. In the meantime, do not hesitate to contact Inès Mertens a (<a href="mailto:ines@inventures.fund">ines@inventures.fund</a>) should you have any further question.  </p>
+      <p>We will further communicate with you once the split will have been carried out. In the meantime, do not hesitate to contact Inès Mertens (<a href="mailto:ines@inventures.fund">ines@inventures.fund</a>) should you have any further question.</p>
     </div>
   </div>
 </div>
