Link to info@inventures.fund

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <h3 class='center regular py1'>Entrepreneur</h3>
 
-      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund ? Then contact us directly at (email address).
+      <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund ? Then contact us directly at <a href="mailto:info@inventures.fund">info@inventures.fund</a>.
 
       <a href='/get-funded' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
     </div>
