Center CTA on home page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <p>If you’re willing to commit a minimum of €100,000 which will help support businesses that follow the UN SDGs, find out the <a href='/invest/'>benefits</a> and contact us.</p>
 
-      <a href='/invest/' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
+      <p class="center">
+        <a href='/invest/' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>CALL FOR INVESTORS</a>
+      </p>
     </div>
 
     <div class='col sm-col-6 px2'>
@@ -104,7 +106,9 @@ description: Inventures is the first European crowd-venturing impact fund, a ven
 
       <p>Do you have a European impact business which is striving to improve our society? Are you interested in raising capital from a fund ? Then contact us directly at <a href="mailto:info@inventures.fund">info@inventures.fund</a>.
 
-      <a href='/get-funded' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
+      <p class="center">
+        <a href='/get-funded' class='btn btn-primary bg-sunset-orange h5 mt1 mb2'>APPLY TO RAISE FUNDS</a>
+      </p>
     </div>
   </div>
 </div>
